--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "all": "^0.0.0",
     "core-js": "^3.34.0",
+    "fs": "^0.0.1-security",
     "roboto-fontface": "*",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vue": "^3.3.0",
